force-app/main/default/objects/Business_Analysis_Report__c/Business_Analysis_Report__c.object-meta.xml
<CustomObject>
    <label>业务分析报告</label>
    <nameField>
        <displayFormat>BA{000000}</displayFormat>
        <label>Business Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>