force-app/main/default/objects/Business_Analysis_Report__c/fields/Corresponding_Period__c.field-meta.xml
<CustomField>
    <fullName>Corresponding_Period__c</fullName>
    <label>Corresponding Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>