force-app/main/default/objects/Business_Analysis_Report__c/fields/Plan_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Plan_Revenue__c</fullName>
    <label>Plan Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>