force-app/main/default/objects/Business_Analysis_Report__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R&amp;F</fullName>
            </value>
            <value>
                <fullName>WM</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>