force-app/main/default/objects/Business_Analysis_Report__c/fields/Proportion_In_The_Same_Period__c.field-meta.xml
<CustomField>
    <fullName>Proportion_In_The_Same_Period__c</fullName>
    <formula>IF(Corresponding_Period__c &gt; 0, Actual_Revenue__c / Corresponding_Period__c - 1, null)</formula>
    <label>Proportion In The Same Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>